force-app/main/default/objects/SupplySite__c/SupplySite__c.object-meta.xml
<CustomObject>
    <label>納入サイト</label>
    <nameField>
        <label>納入サイト名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>