force-app/main/default/objects/SupplySite__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>最終顧客</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>納入サイト（最終顧客）</relationshipLabel>
    <relationshipName>SupplySites</relationshipName>
    <type>Lookup</type>
</CustomField>