force-app/main/default/objects/SupplySite__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>市区町村</label>
    <length>255</length>
    <type>Text</type>
</CustomField>