force-app/main/default/objects/SupplySite__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>備考</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>