force-app/main/default/objects/SupplySite__c/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <label>SBU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>建設防災</fullName>
            </value>
            <value>
                <fullName>有料道路</fullName>
            </value>
            <value>
                <fullName>警察海保</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>