force-app/main/default/objects/SupplySite__c/listViews/Listview02.listView-meta.xml
<ListView>
    <fullName>Listview02</fullName>
    <columns>NAME</columns>
    <columns>SBU__c</columns>
    <columns>Account__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DepartmentAndDivision__c</field>
        <operation>equals</operation>
        <value>01_本社</value>
    </filters>
    <filters>
        <field>SBU__c</field>
        <operation>equals</operation>
        <value>警察海保</value>
    </filters>
    <label>03.社会環境事業部の納入サイト（警察海保）</label>
</ListView>