force-app/main/default/objects/SupplySite__c/listViews/Listview03.listView-meta.xml
<ListView>
    <fullName>Listview03</fullName>
    <columns>NAME</columns>
    <columns>SBU__c</columns>
    <columns>Account__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBU__c</field>
        <operation>equals</operation>
        <value>有料道路</value>
    </filters>
    <filters>
        <field>DepartmentAndDivision__c</field>
        <operation>equals</operation>
        <value>01_本社</value>
    </filters>
    <label>02.社会環境事業部の納入サイト（有料道路）</label>
</ListView>