force-app/main/default/objects/SupplySite__c/listViews/Listview05.listView-meta.xml
<ListView>
    <fullName>Listview05</fullName>
    <columns>NAME</columns>
    <columns>SBU__c</columns>
    <columns>Account__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DepartmentAndDivision__c</field>
        <operation>equals</operation>
        <value>02_北海道支社</value>
    </filters>
    <filters>
        <field>SBU__c</field>
        <operation>equals</operation>
        <value>有料道路</value>
    </filters>
    <label>05.北海道支社の納入サイト（有料道路）</label>
</ListView>