force-app/main/default/objects/SupplySite__c/listViews/Listview07.listView-meta.xml
<ListView>
    <fullName>Listview07</fullName>
    <columns>NAME</columns>
    <columns>SBU__c</columns>
    <columns>Account__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DepartmentAndDivision__c</field>
        <operation>equals</operation>
        <value>03_東北支社</value>
    </filters>
    <filters>
        <field>SBU__c</field>
        <operation>equals</operation>
        <value>建設防災</value>
    </filters>
    <label>07.東北支社の納入サイト（建設防災）</label>
</ListView>