force-app/main/default/objects/SupplySite__c/listViews/Listview11.listView-meta.xml
<ListView>
    <fullName>Listview11</fullName>
    <columns>NAME</columns>
    <columns>SBU__c</columns>
    <columns>Account__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DepartmentAndDivision__c</field>
        <operation>equals</operation>
        <value>04_関越支社</value>
    </filters>
    <filters>
        <field>SBU__c</field>
        <operation>equals</operation>
        <value>有料道路</value>
    </filters>
    <label>11.関越支社の納入サイト（有料道路）</label>
</ListView>