force-app/main/default/objects/SupplySite__c/listViews/Listview13.listView-meta.xml
<ListView>
    <fullName>Listview13</fullName>
    <columns>NAME</columns>
    <columns>SBU__c</columns>
    <columns>Account__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DepartmentAndDivision__c</field>
        <operation>equals</operation>
        <value>05_神奈川支社</value>
    </filters>
    <filters>
        <field>SBU__c</field>
        <operation>equals</operation>
        <value>建設防災</value>
    </filters>
    <label>13.神奈川支社の納入サイト（建設防災）</label>
</ListView>