force-app/main/default/objects/SupplySite__c/listViews/Listview15.listView-meta.xml
<ListView>
    <fullName>Listview15</fullName>
    <columns>NAME</columns>
    <columns>SBU__c</columns>
    <columns>Account__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DepartmentAndDivision__c</field>
        <operation>equals</operation>
        <value>05_神奈川支社</value>
    </filters>
    <filters>
        <field>SBU__c</field>
        <operation>equals</operation>
        <value>警察海保</value>
    </filters>
    <label>15.神奈川支社の納入サイト（警察海保）</label>
</ListView>